--- a/composer.json
+++ b/composer.json
@@ -1,40 +1,41 @@
 {
-    "name": "codehubcare/laravel-deployer",
-    "description": "Deploy laravel based application to a shared web hosting",
-    "type": "library",
-    "autoload": {
-        "psr-r": {
-            "Codehubcare\\LaravelDeployer\\": "src/"
-        }
-    },
-    "authors": [
-        {
-            "name": "Shamshad Zaheer",
-            "email": "shamshadtech101@gmail.com"
-        }
-    ],
-    "require-dev": {
-        "orchestra/testbench": "^9.9"
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Workbench\\App\\": "workbench/app/",
-            "Workbench\\Database\\Factories\\": "workbench/database/factories/",
-            "Workbench\\Database\\Seeders\\": "workbench/database/seeders/"
-        }
-    },
-    "scripts": {
-        "post-autoload-dump": [
-            "@clear",
-            "@prepare"
-        ],
-        "clear": "@php vendor/bin/testbench package:purge-skeleton --ansi",
-        "prepare": "@php vendor/bin/testbench package:discover --ansi",
-        "build": "@php vendor/bin/testbench workbench:build --ansi",
-        "serve": [
-            "Composer\\Config::disableProcessTimeout",
-            "@build",
-            "@php vendor/bin/testbench serve --ansi"
-        ]
+  "name": "codehubcare/laravel-deployer",
+  "description": "Deploy laravel based application to a shared web hosting",
+  "type": "library",
+  "autoload": {
+    "psr-r": {
+      "Codehubcare\\LaravelDeployer\\": "src/"
     }
+  },
+  "authors": [
+    {
+      "name": "Shamshad Zaheer",
+      "email": "shamshadzr@gmail.com"
+    }
+  ],
+  "require-dev": {
+    "orchestra/testbench": "^9.9",
+    "laravel/pint": "^1.20"
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Workbench\\App\\": "workbench/app/",
+      "Workbench\\Database\\Factories\\": "workbench/database/factories/",
+      "Workbench\\Database\\Seeders\\": "workbench/database/seeders/"
+    }
+  },
+  "scripts": {
+    "post-autoload-dump": [
+      "@clear",
+      "@prepare"
+    ],
+    "clear": "@php vendor/bin/testbench package:purge-skeleton --ansi",
+    "prepare": "@php vendor/bin/testbench package:discover --ansi",
+    "build": "@php vendor/bin/testbench workbench:build --ansi",
+    "serve": [
+      "Composer\\Config::disableProcessTimeout",
+      "@build",
+      "@php vendor/bin/testbench serve --ansi"
+    ]
+  }
 }
